removed 2.0 (deprecated, old version), fixed options_do_page layout issues,fix content sizing reset(scs.css) for better theme compatibility.
git-svn-id: https://plugins.svn.wordpress.org/facebook-page-promoter-lightbox/trunk@662759 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/admin/style.css
+++ b/admin/style.css
@@ -1,5 +1,4 @@
 .vertal td{
-	vertical-align:top;
 }
 .vertal th{
 background-color:#D7F2FF ;
@@ -13,10 +12,9 @@ width:100px;
 }
 
 .templatead{
-	display:none;
-	color:red;
+  display:none;
+  color:red;
 }
-
 
 .dispin{
 display:inline-block;
@@ -25,7 +23,7 @@ width:180px;
 
 
 .pcttext{
-	width:50px;
+  width:50px;
 }
 .sltab{
 }.sltab{
@@ -44,14 +42,14 @@ display:none;
     color: #000000;
 }
 .slheadcontainer{
-	border-bottom:1px solid #B0C8D7;
-	font-size:14pt;
-	padding-bottom:4px;
+  border-bottom:1px solid #B0C8D7;
+  font-size:14pt;
+  padding-bottom:4px;
 }
 
 .sltab{
       white-space: nowrap;
-	padding-top:10px;
+  padding-top:10px;
 }
 /**========== OPTIONS ==============
 * this should be in a seperate css files, but to reduce
@@ -59,9 +57,10 @@ display:none;
 */
 
 .ilb{ /* Inline Block Cross Browser */
-	display: -moz-inline-stack;
+  display: -moz-inline-stack;
     display: inline-block;
     margin-bottom:5px;
+    vertical-align: middle;
 }
 
 
@@ -69,20 +68,17 @@ display:none;
 {
    white-space:normal;
     width:200px;
-	text-align:right;
-	vertical-align:top;
-	padding-right:5px;
+  text-align:right;
+  padding-right:5px;
 }
 .lblmiddle{
  white-space: nowrap;
- vertical-align:top;
  padding-left:30px;
 }
 .sltab input[type="text"]{
-	width:190px;
+  width:190px;
 }
 .sltab input[type="select"]{
-  vertical-align:top;
 }
 
 .sltab textarea{
@@ -90,49 +86,115 @@ display:none;
   height:100px;
 }
 
-.val-glowblue{
-  border:1px solid #fafafa;
-  -webkit-box-shadow:0 0 2px #007eff;
-  -moz-box-shadow:0 0 2px #007eff;
-  box-shadow:0 0 2px #007eff;
-  outline: none;
-  border-color:#ffffff;
-}
-.val-glowgreen{
-  border:1px solid green;
-  -webkit-box-shadow:0 0 2px green;
-  -moz-box-shadow:0 0 2px green;
-  box-shadow:0 0 2px green;
-  outline: none;
-}
-.val-glowred{
- background:blue;
-  border:1px solid red;
-  -webkit-box-shadow:0 0 2px red;
-  -moz-box-shadow:0 0 2px red;
-  box-shadow:0 0 2px red;
-  outline: none;
-}
-
-.lblhintok{
-  padding-left:30px;
-  color:green;
-  background:url(tick.png) no-repeat;
-}
-.lblhinterror{
-  padding-left:30px;
-  background:url(cross.png) no-repeat;
-  color:red;
-}
-
 .chklbl{
 display:inline-block;
 width:100px;
 margin-left:5px;
 }
-.lblhint {
-vertical-align:top;
-}
+
 .aalig a{
 margin-left:20px;
+}
+
+.wrap input{
+  border-radius:0;
+}
+.wrap select{
+   line-height: 24px;
+
+}
+.chklbl{
+  display:inline-block;
+  width:100px;
+}
+/*===========*/
+.wrap{
+
+
+}
+ .wrap{
+  font-size: 14px;
+   font-family: "Segoe UI","Segoe UI Web Regular","Helvetica Neue","BBAlpha Sans","S60 Sans",Arial,"sans-serif";
+}
+.wrap input[type="text"],.wrap textarea,.wrap select{
+    border: 1px solid rgba(0, 0, 0, 0.27);
+    color: #212121;
+    font-family: "Segoe UI","Segoe UI Web Regular","Helvetica Neue","BBAlpha Sans","S60 Sans",Arial,"sans-serif";
+    font-size: 16px;
+    line-height: 24px;
+}
+.wrap input[type="checkbox"]{
+}
+.wrap input[type="text"]:focus,.wrap textarea:focus,.wrap select:focus{
+    border-color: rgba(0, 0, 0, 0.64);
+    outline: medium none;
+}
+
+.wrap .checkbox{
+  float:left;
+  width:1.466em ;
+    border: 1px solid rgba(0, 0, 0, 0.27);
+    color: #212121;
+    font-family: "Segoe UI","Segoe UI Web Regular","Helvetica Neue","BBAlpha Sans","S60 Sans",Arial,"sans-serif";
+    font-size: 100%;
+    padding: 4px 8px;
+    height: 24px;
+}
+
+.wrap .labelleft,.optionright{
+   float:left;
+   line-height:24px;
+}
+.wrap .labelleft{
+    line-height: 24px;
+    font-size:16px;
+    text-align: right;
+    width:200px;
+    padding:5px 20px 0 0;
+    height: 24px;
+}
+.wrap .cb{
+  clear:both;
+}
+
+.wrap .tile{
+  cursor:pointer;
+  color:white;
+  display:inline-block;
+  line-height: 24px;
+  padding:5px;
+  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=75);
+  -moz-opacity: 0.75;         /* Mozilla extension */
+  -khtml-opacity:0.75;        /* Konqueror extension (Safari 1.1)*/
+  opacity: 0.75;              /* the correct CSS3 syntax */
+}
+.wrap .tile:hover{
+filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
+  -moz-opacity: 1;         /* Mozilla extension */
+  -khtml-opacity:1;        /* Konqueror extension (Safari 1.1)*/
+  opacity: 1;              /* the correct CSS3 syntax */
+  opacity:1;
+}
+
+.wrap .msubmit:hover{
+filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
+
+  -moz-opacity: 1;         /* Mozilla extension */
+  -khtml-opacity:1;        /* Konqueror extension (Safari 1.1)*/
+  opacity: 1;              /* the correct CSS3 syntax */
+  opacity:1;
+}
+
+.wrap .msubmit{
+  float:right;
+  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=75);
+  -moz-opacity: 0.75;         /* Mozilla extension */
+  -khtml-opacity:0.75;        /* Konqueror extension (Safari 1.1)*/
+  opacity: 0.75;              /* the correct CSS3 syntax */
+  text-align: center;
+  color:#ffffff;
+  font-size:14px;
+  background-color: #1BA1E2;
+  padding: 5px;
+  border:solid 0;
 }
